# YaPZT_Lab6

./: CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: cpp-ci.yml
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
tests/: CMakeLists.txt
